fixed mobile layout bugs

--- a/src/css/modules/taskList.scss
+++ b/src/css/modules/taskList.scss
@@ -10,6 +10,7 @@
 	.taskList-task-marker {
 		padding-top: .5em;
 		padding-bottom: .5em;
+		text-align: center;
 	}
 }
 .taskList-title {
